# dbus-audio-controller

./: CMakeLists.txt  README.md  cmake.sh  generated_dbus.c  generated_dbus.h  generated_mediaplayer2.c  generated_mediaplayer2.h  main.cpp  notes.md  org_freedesktop_dbus.xml  org_mpris_mediaplayer2.xml
